# ai-summarize-api-actix-rust

./: Cargo.toml  README.md  docker-compose.yml
src/: docs.rs  main.rs  middleware.rs
src/driver/: db.rs
src/handler/: auth.rs  file_handler.rs  mod.rs  request.rs  response.rs  root.rs
src/libs/: hash.rs  minio.rs  mod.rs  openai.rs
src/model/: mod.rs  summary.rs  users.rs
src/service/: auth.rs  file.rs
